--- a/TaskManager.Web/Views/ProjectTasksPages/Index.cshtml
+++ b/TaskManager.Web/Views/ProjectTasksPages/Index.cshtml
@@ -1,21 +1,16 @@
 ﻿@using TaskManager.Tasks.Abstractions
-@using TaskManager.Users.Abstractions
-
 @model IReadOnlyList<TaskDto>
+
 @{
     ViewData["Title"] = "Tasks";
     var pid = (Guid)ViewBag.ProjectId;
     var actorId = (string)ViewBag.ActorId;
+    // Lấy map từ Controller
+    var nameMap = ViewBag.UsernameMap as IDictionary<string, string>
+                  ?? new Dictionary<string, string>(StringComparer.Ordinal);
 }
 
-@inject IUserReadOnly Users
-@functions {
-    public async Task<string> UsernameAsync(string userId, CancellationToken ct = default)
-    {
-        var u = await Users.GetUserByIdAsync(userId, ct);
-        return u?.Username ?? userId; // fallback nếu không tìm thấy
-    }
-}
+
 
 <div class="d-flex justify-content-between align-items-center mb-3">
     <h3 class="mb-0">Tasks</h3>
@@ -68,9 +63,9 @@ else
                         @{
                             if (t.AssigneeUserIds?.Any() ?? false)
                             {
-                                var tasks = t.AssigneeUserIds.Select(id => UsernameAsync(id));
-                                var names = string.Join(", ", (await Task.WhenAll(tasks)));
-                                @names
+                                var names = t.AssigneeUserIds
+                                .Select(id => nameMap.TryGetValue(id, out var n) ? n : id);
+                                @string.Join(", ", names)
                             }
                             else
                             {
@@ -80,6 +75,12 @@ else
                     </td>
 
                     <td class="text-end">
+                        <a class="btn btn-sm btn-outline-primary"
+                           asp-action="Edit"
+                           asp-route-projectId="@pid"
+                           asp-route-taskId="@t.Id">
+                            Sửa
+                        </a>
                         <form asp-action="Delete"
                               asp-route-projectId="@pid"
                               asp-route-taskId="@t.Id"
@@ -90,6 +91,7 @@ else
                             <button type="submit" class="btn btn-sm btn-outline-danger">Xóa</button>
                         </form>
                     </td>
+
                 </tr>
             }
         </tbody>
