--- a/TaskManager.Web/Views/ProjectTasksPages/Edit.cshtml
+++ b/TaskManager.Web/Views/ProjectTasksPages/Edit.cshtml
@@ -190,7 +190,7 @@
                 }
 
                 var chip = document.createElement('span');
-                chip.className = 'badge rounded-pill text-bg-secondary';
+                chip.className = 'badge rounded-pill text-bg-secondary text-black';
                 chip.style.userSelect = 'none';
                 chip.setAttribute('data-user-id', userId);
 
